# nginx-ingress-django-auth

./: .dockerignore  Dockerfile  pyproject.toml  test.py
deployment/: deployment.yaml  ingress.yaml  issuer.yaml  kustomization.yaml  service.yaml
forward_auth/auth_server/: admin.py  models.py  utils.py  views.py
forward_auth/auth_server/migrations/: 0001_initial.py  0002_alter_token_last_used_at.py
forward_auth/settings/: base.py
