[tool.poetry]
name = "forward-auth"
version = "0.1.0"
description = ""
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2"
django-cors-headers = "3.10"
gunicorn = "20.1"
loguru = "^0.6.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
